--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -35,4 +36,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="/socket.io/socket.io.js"></script>
+
 </html>
